--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,5 @@ repositories {
 dependencies {
     implementation 'org.javacord:javacord:3.0.6'
     compileOnly 'org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT'
+    compile group: 'commons-io', name: 'commons-io', version: '2.7'
 }
