--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,28 @@ group 'org.zerrium'
 version '1.0-SNAPSHOT'
 
 repositories {
+    maven {
+        name 'papermc'
+        url 'https://papermc.io/repo/repository/maven-public/'
+    }
     maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
     maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url 'https://nexus.scarsz.me/content/groups/public/' }
+    maven {
+        url "https://ci.ender.zone/plugin/repository/everything/"
+    }
+    maven {
+        name'Vankka-Nexus'
+        url 'https://nexus.vankka.dev/repository/maven-public/'
+    }
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
-    implementation 'org.javacord:javacord:3.0.6'
+    compileOnly 'com.discordsrv:discordsrv:1.20.0'
     implementation 'org.jetbrains:annotations:19.0.0'
-    compileOnly 'org.spigotmc:spigot-api:1.16.1-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.16.4-R0.1-SNAPSHOT'
+    compileOnly 'net.ess3:EssentialsX:2.18.2'
     compile group: 'commons-io', name: 'commons-io', version: '2.7'
 }
