--- a/src/main/java/config.yml
+++ b/src/main/java/config.yml
@@ -1,8 +1,8 @@
-#--------------------------#
-#  Config for Zstats v1.0  #
-#--------------------------#
-#   Developed by: Zerrium  #
-#--------------------------#
+#--------------------------------#
+#  Config for Zstats v1.0 - 2.0  #
+#--------------------------------#
+#      Developed by: Zerrium     #
+#--------------------------------#
 
 ##Database Config (MySQL)
 hostname: 'localhost'
