--- a/build.gradle
+++ b/build.gradle
@@ -20,15 +20,22 @@ repositories {
         name'Vankka-Nexus'
         url 'https://nexus.vankka.dev/repository/maven-public/'
     }
+    maven {
+        name 'm2-dv8tion'
+        url 'https://m2.dv8tion.net/releases'
+    }
+    maven {
+        name "essentialsx-releases"
+        url "https://repo.essentialsx.net/releases/"
+    }
     mavenCentral()
-    jcenter()
 }
 
 dependencies {
-    compileOnly 'com.discordsrv:discordsrv:1.21.3'
-    implementation 'org.jetbrains:annotations:19.0.0'
+    compileOnly 'com.discordsrv:discordsrv:1.24.0'
+    implementation 'org.jetbrains:annotations:22.0.0'
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '4.0.3'
-    compileOnly 'org.spigotmc:spigot-api:1.16.5-R0.1-SNAPSHOT'
-    compileOnly 'net.ess3:EssentialsX:2.18.2'
-    compile group: 'commons-io', name: 'commons-io', version: '2.7'
+    compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
+    compileOnly 'net.essentialsx:EssentialsX:2.19.0'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.7'
 }
