--- a/build.gradle
+++ b/build.gradle
@@ -6,16 +6,11 @@ group 'org.zerrium'
 version '1.0-SNAPSHOT'
 
 repositories {
-    maven {
-        name 'papermc'
-        url 'https://papermc.io/repo/repository/maven-public/'
-    }
-    maven { url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
-    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
+    maven { url 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
     maven { url 'https://nexus.scarsz.me/content/groups/public/' }
-    maven {
-        url "https://ci.ender.zone/plugin/repository/everything/"
-    }
+    maven { url 'https://ci.ender.zone/plugin/repository/everything/'}
+    maven { url 'https://mvnrepository.com/artifact/org.slf4j/slf4j-api'}
     maven {
         name'Vankka-Nexus'
         url 'https://nexus.vankka.dev/repository/maven-public/'
@@ -25,17 +20,18 @@ repositories {
         url 'https://m2.dv8tion.net/releases'
     }
     maven {
-        name "essentialsx-releases"
-        url "https://repo.essentialsx.net/releases/"
+        name 'essentialsx-releases'
+        url 'https://repo.essentialsx.net/releases/'
     }
     mavenCentral()
 }
 
 dependencies {
     compileOnly 'com.discordsrv:discordsrv:1.24.0'
-    implementation 'org.jetbrains:annotations:22.0.0'
+    implementation 'org.jetbrains:annotations:23.0.0'
     implementation group: 'com.zaxxer', name: 'HikariCP', version: '5.0.0'
-    compileOnly 'org.spigotmc:spigot-api:1.17.1-R0.1-SNAPSHOT'
+    compileOnly 'org.spigotmc:spigot-api:1.18-R0.1-SNAPSHOT'
     compileOnly 'net.essentialsx:EssentialsX:2.19.0'
-    implementation group: 'commons-io', name: 'commons-io', version: '2.7'
+    implementation group: 'commons-io', name: 'commons-io', version: '2.11.0'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
 }
